--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hello">Hello World, StatusActivity!</string>
     <string name="app_name">NagDroid</string>
 <string name="list">list1</string>
+<string name="refresh">Refresh</string>
 </resources>
